@@ -10,6 +10,8 @@ What's New in Python 3.4.0 Alpha 1?
 Core and Builtins
 -----------------
 
+- Issue #17722: When looking up __round__, resolve descriptors.
+
 - Issue #16061: Speed up str.replace() for replacing 1-character strings.
 
 - Issue #17715: Fix segmentation fault from raising an exception in a __trunc__
